--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,10 @@ website:
     left:
       - href: index.qmd
         text: About
+      - href: projects.qmd
+        text: Projects
+      - href: games.qmd
+        text: Games
 
 format:
   html:
@@ -17,6 +21,6 @@ format:
       - darkly
       - styles.scss
     toc: false
-
-
-
+    
+execute: 
+  freeze: auto
