--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,9 @@ website:
         text: Projects
       - href: games.qmd
         text: Games
+    right:
+      - text: "Oscar Su's Personal Website" # will need to disable hover effect
+  search: false
 
 format:
   html:
