--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,13 +9,13 @@ website:
     collapse-below: sm
     left:
       - href: index.qmd
-        text: About
+        text: Home
       - href: projects.qmd
         text: Projects
       - href: games.qmd
         text: Games
     right:
-      - text: "Oscar Su's Personal Website" # will need to disable hover effect
+      - text: "Oscar Su"
   search: false
 
 format:
